--- a/ci/ReleaseTool/ReleaseTool.csproj
+++ b/ci/ReleaseTool/ReleaseTool.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.4.3" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.0" />
+    <PackageReference Include="MedallionShell" Version="1.6.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="NLog" Version="4.6.0-rc3" />
     <PackageReference Include="Octokit" Version="0.32.0" />
