--- a/.buildkite/premerge.steps.yaml
+++ b/.buildkite/premerge.steps.yaml
@@ -58,6 +58,7 @@ steps:
   - trigger: "unrealgdkexampleproject-nightly"
     label: "post-merge-example-project-build"
     branches: "master preview release"
+    if: build.env("ENGINE_NET_TEST") != "true"
     async: true
     build:
       env:
@@ -78,6 +79,6 @@ steps:
     <<: *script_runner
   
   - label: "slack-notify"
-    if: (build.env("SLACK_NOTIFY") == "true" || build.branch == "master") && build.env("SLACK_NOTIFY") != "false"
+    if: (build.env("SLACK_NOTIFY") == "true" || build.branch == "master") && build.env("SLACK_NOTIFY") != "false" && build.env("ENGINE_NET_TEST") != "true"
     commands: "powershell ./ci/build-and-send-slack-notification.ps1"
     <<: *windows
