--- a/.buildkite/premerge.steps.yaml
+++ b/.buildkite/premerge.steps.yaml
@@ -57,8 +57,7 @@ steps:
   # Trigger an Example Project build for any merges into master, preview or release branches of UnrealGDK
   - trigger: "unrealgdkexampleproject-nightly"
     label: "post-merge-example-project-build"
-    branches: "master preview release"
-    if: build.env("ENGINE_NET_TEST") != "true"
+    if: build.env("ENGINE_NET_TEST") != "true" && (build.branch == "master" || build.branch == "preview" || build.branch == "release")
     async: true
     build:
       env:
