--- a/.buildkite/release.steps.yaml
+++ b/.buildkite/release.steps.yaml
@@ -45,7 +45,7 @@ steps:
   
 # Stage 2: Builds all UnrealEngine release candidates, compresses and uploads Engine artifacts to Google Cloud Storage for use by test pipelines.
   - label: "Build & upload all UnrealEngine release candidates"
-    command: ci/generate-unrealengine-premerge-trigger | tee /dev/fd/2 | buildkite-agent pipeline upload
+    command: ci/generate-unrealengine-premerge-trigger.sh | tee /dev/fd/2 | buildkite-agent pipeline upload
     <<: *common # This folds the YAML named anchor into this step. Overrides, if any, should follow, not precede.
     retry:
       manual:
