--- a/.buildkite/release.steps.yaml
+++ b/.buildkite/release.steps.yaml
@@ -51,12 +51,17 @@ steps:
       manual:
         permit_on_passed: true
     concurrency: 1
-    concurrency_group: 'unrealgdk-release'
-    
+    concurrency_group: "unrealgdk-release"
+  
   - wait
 
  # Stage 3: Run all tests against the release candidates.
-  - label: "Trigger all automated tests"
+
+ # Block steps require a human to click a button. This 
+ - block: "Run all tests"
+   prompt: "This action triggers all tests. Tests depend on the presence of unrealengine-premerge artifacts in Google Cloud Storage. Only click OK if the above unrealengine-premerge build(s) have passed."
+
+ - label: "Trigger all automated tests"
     command: ci/generate-release-qa-trigger.sh | tee /dev/fd/2 | buildkite-agent pipeline upload
     <<: *common # This folds the YAML named anchor into this step. Overrides, if any, should follow, not precede.
     retry:
@@ -64,8 +69,11 @@ steps:
         permit_on_passed: true
     concurrency: 1
     concurrency_group: 'unrealgdk-release'
+  
+  - wait
 
   # Stage 4: Promote the release candiates to their respective release branches.
+
   # Block steps require a human to click a button, this is a safety precaution.
   - block: "Unblock the release"
     prompt: "This action will merge all release candidates into their respective release branches."
