--- a/.buildkite/release.steps.yaml
+++ b/.buildkite/release.steps.yaml
@@ -39,7 +39,7 @@ steps:
   #    manual:
   #      permit_on_passed: true
   #  concurrency: 1
-  #  concurrency_group: 'unrealgdk-release'
+  #  concurrency_group: "unrealgdk-release"
 
  # - wait
   
@@ -52,23 +52,20 @@ steps:
         permit_on_passed: true
     concurrency: 1
     concurrency_group: "unrealgdk-release"
-  
-  - wait
 
  # Stage 3: Run all tests against the release candidates.
-
  # Block steps require a human to click a button. This 
- - block: "Run all tests"
-   prompt: "This action triggers all tests. Tests depend on the presence of unrealengine-premerge artifacts in Google Cloud Storage. Only click OK if the above unrealengine-premerge build(s) have passed."
+  - block: "Run all tests"
+    prompt: "This action triggers all tests. Tests depend on the presence of unrealengine-premerge artifacts in Google Cloud Storage. Only click OK if the above unrealengine-premerge build(s) have passed."
 
- - label: "Trigger all automated tests"
+  - label: "Trigger all automated tests"
     command: ci/generate-release-qa-trigger.sh | tee /dev/fd/2 | buildkite-agent pipeline upload
     <<: *common # This folds the YAML named anchor into this step. Overrides, if any, should follow, not precede.
     retry:
       manual:
         permit_on_passed: true
     concurrency: 1
-    concurrency_group: 'unrealgdk-release'
+    concurrency_group: "unrealgdk-release"
   
   - wait
 
@@ -81,5 +78,5 @@ steps:
   - label: Release
     command: ci/release.sh
     concurrency: 1
-    concurrency_group: 'unrealgdk-release'
+    concurrency_group: "unrealgdk-release"
     <<: *common # This folds the YAML named anchor into this step. Overrides, if any, should follow, not precede.
