uncomment prep step

--- a/.buildkite/release.steps.yaml
+++ b/.buildkite/release.steps.yaml
@@ -30,18 +30,18 @@ steps:
         required: true
         hint: "The Unreal Engine branch (or branches) that you want to create release candidates from. Put each branch on a separate line with the primary Engine version at the top."
         default: "dry-run/4.24-SpatialOSUnrealGDK\ndry-run/4.23-SpatialOSUnrealGDK"
-### TODO: Uncomment prepare when test and release are passing dry-run `git revert`
-  # Stage 1: Prepare the release candidates. Prepare steps create a PR and upload metadata but do not release anything.
-  #- label: "Prepare the release"
-  #  command: ci/prepare-release.sh
-  #  <<: *common # This folds the YAML named anchor into this step. Overrides, if any, should follow, not precede.
-  #  retry:
-  #    manual:
-  #      permit_on_passed: true
-  #  concurrency: 1
-  #  concurrency_group: "unrealgdk-release"
 
- # - wait
+  # Stage 1: Prepare the release candidates. Prepare steps create a PR and upload metadata but do not release anything.
+  - label: "Prepare the release"
+    command: ci/prepare-release.sh
+    <<: *common # This folds the YAML named anchor into this step. Overrides, if any, should follow, not precede.
+    retry:
+      manual:
+        permit_on_passed: true
+    concurrency: 1
+    concurrency_group: "unrealgdk-release"
+
+  - wait
   
 # Stage 2: Builds all UnrealEngine release candidates, compresses and uploads Engine artifacts to Google Cloud Storage for use by test pipelines.
   - label: "Build & upload all UnrealEngine release candidates"
