Revert "Update permissions so they match https://buildkite.com/improbable/unrealgdk-release/settings/teams"
This reverts commit f0706d0fdeb7550b8e9c3b457a67d9c57402192c.

--- a/.buildkite/premerge.definition.yaml
+++ b/.buildkite/premerge.definition.yaml
@@ -6,8 +6,6 @@ github:
   pull_request_branch_filter_configuration: []
 teams:
 - name: Everyone
-  permission: READ_ONLY
+  permission: BUILD_AND_READ
 - name: gbu/develop/unreal
-  permission: MANAGE_BUILD_AND_READ
-- name: robots
   permission: MANAGE_BUILD_AND_READ
