Feature/gv 34 release tool (#1969)
* work on prep command

* Re-name target branch to release branch for clarity

* wip

* WIP rework of generate-release-qa-trigger

* work on the c sharp tool

* enforce semantic versioning

* Added unrealgdk-premerge to the test trigger, which in turn necessitated our releasing in the UnrealGDKEngineNetTest repo

* Completed first pass at test trigger script

* make spatialos organization a cmd arg

* Add async build attribute to run all tests simultaneously. Properly parse env variables in trigger comand.

* stop using fork

* fix tool

* Modify GitHub releases titles and body text

* Modify ProductHeaderValue to Unreal rather than Unity

* add ~

* fix steps.yaml

* temp change

* updte queue

* fix steps.yaml

* release branch creation

* Alter the PR bodies so that they reflect the Unreal GDK release process

* fix typo

* add buildkite commands

* Update ci/ReleaseTool/BuildkiteAgent.cs

* Use SetMetaData & GetMetaData to feed UnrealGDK PR URL into other related PRs

* wip

* Replace master and release with dry-run/master and dry-run/release

* Clean up build descriptions

* add buildkite annotations

* fix typo

* Remove completed TODOs

* dry run 1: remove ci/improbable from secret name as it seems to break the filepath in vault

* Fix docker path

* Fix docker path again

* Modify git ignore

* modified git ignore again

* modify git ignore final final

* remove references to unity specific sln

* update csproj

* temporarily disable tests

* temporarily disable tests pt 2

* fix key name

* fix variable name

* check out local branches

* Speculative fix: checkour remote branch rather than local one

* yolo path fix

* undo yolo path fix

* speculative path fix

* speculative path fix - hardcoded

* speculative path fix - hardcoded correctly

* search for plugin in gdk

* fix pluginFileName

* fix working directory

* 

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Visual Studio Code user specific files
 .vscode/
 
+# IDEA user files
+.idea/
+
 # Visual Studio 2015 user specific files
 .vs/
 
@@ -80,6 +83,9 @@ Generated/
 logs/
 
 Scripts/spatialos.*.build.json
+
+# Docker needs this sln to build the Release Tool
+!ci/Tools.sln
 
 !SpatialGDK/Build/Programs/Improbable.Unreal.Scripts/Improbable.Unreal.Scripts.sln
 !SpatialGDK/Build/Programs/Improbable.Unreal.Scripts/Mac/Improbable.Unreal.Scripts.sln
