enable SpatialGDKTests for mac

--- a/SpatialGDK/SpatialGDK.uplugin
+++ b/SpatialGDK/SpatialGDK.uplugin
@@ -70,7 +70,8 @@
       "Type": "Editor",
       "LoadingPhase": "PreLoadingScreen",
       "WhitelistPlatforms": [
-        "Win64"
+        "Win64",
+        "Mac"
       ]
     },
     {
