--- a/.buildkite/release.steps.yaml
+++ b/.buildkite/release.steps.yaml
@@ -90,6 +90,10 @@ steps:
     <<: *common # This folds the YAML named anchor into this step. Overrides, if any, should follow, not precede.
 
  # Stage 5: Mirror the release code from Github to Gitee
+  - block: "Unblock mirror code to gitee"
+    prompt: "This action will mirror all of the release code to gitee."
+
+
   - trigger: platform-copybara
     label: "Run platform-copybara"
     depends_on: Release
