1. Remove depends on fields 2. Change MASTER to master

--- a/.buildkite/release.steps.yaml
+++ b/.buildkite/release.steps.yaml
@@ -95,10 +95,9 @@ steps:
 
   - trigger: platform-copybara
     label: "Run platform-copybara"
-    depends_on: Release
       build:
         message: "Triggered from UnrealGDK Release"
         commit: "HEAD"
-        branch: "MASTER"
+        branch: "master"
     concurrency: 1
     concurrency_group: "unrealgdk-release"
