Add the depend_on back

--- a/.buildkite/release.steps.yaml
+++ b/.buildkite/release.steps.yaml
@@ -95,6 +95,7 @@ steps:
 
   - trigger: platform-copybara
     label: "Run platform-copybara"
+    depends_on: Release
       build:
         message: "Triggered from UnrealGDK Release"
         commit: "HEAD"
