--- a/OWNERS_ALIASES.yml
+++ b/OWNERS_ALIASES.yml
@@ -1,5 +1,5 @@
 aliases:
-  tech-writers:
+  sig-tech-writers:
     - anne-edwards  # Anne Edwards
     - ElleEss       # Laura Holmwood
     - SPPWilliams   # Simon Williams
