Apply suggestions from code review
Co-authored-by: Peter Mounce <petermounce@improbable.io>

--- a/OWNERS.yml
+++ b/OWNERS.yml
@@ -1,4 +1,7 @@
+---
 filters:
-  "CHANGELOG.md":
+  'CHANGELOG\.md$':
     approvers:
       - sig-tech-writers
+    labels:
+      - docs/changelog
