--- a/.buildkite/release.steps.yaml
+++ b/.buildkite/release.steps.yaml
@@ -35,7 +35,17 @@ steps:
         key: "engine-source-branches"
         required: true
         hint: "The Unreal Engine branch (or branches) that you want to create release candidates from. Put each branch on a separate line with the primary Engine version at the top."
-        default: "4.24-SpatialOSUnrealGDK\n4.23-SpatialOSUnrealGDK"
+        default: "4.25-SpatialOSUnrealGDK\n4.24-SpatialOSUnrealGDK"
+
+      - select: "Actual release or dry-run?"
+        key: "dryrun"
+        required: true
+        default: "true"
+        options:
+          - label: "Dry-run release"
+            value: "true"
+          - label: "Full actual release"
+            value: "false"
 
   # Stage 1: Prepare the release candidates. Prepare steps create a PR and upload metadata but do not release anything.
   - label: "Prepare the release"
@@ -47,9 +57,9 @@ steps:
     concurrency: 1
     concurrency_group: "unrealgdk-release"
 
-  - wait
+  - wait: ~
   
-# Stage 2: Builds all UnrealEngine release candidates, compresses and uploads Engine artifacts to Google Cloud Storage for use by test pipelines.
+  # Stage 2: Builds all UnrealEngine release candidates, compresses and uploads Engine artifacts to Google Cloud Storage for use by test pipelines.
   - label: "Build & upload all UnrealEngine release candidates"
     command: ci/generate-unrealengine-premerge-trigger.sh | tee /dev/fd/2 | buildkite-agent pipeline upload
     <<: *common # This folds the YAML named anchor into this step. Overrides, if any, should follow, not precede.
@@ -61,8 +71,7 @@ steps:
     #TODO: This step is actually not strictly necessary. It will be removed as part of: UNR-3662
     skip: true
 
- # Stage 3: Run all tests against the release candidates.
- # Block steps require a human to click a button. This 
+  # Stage 3: Run all tests against the release candidates.
   - block: "Run all tests"
     prompt: "This action triggers all tests. Tests depend on the presence of unrealengine-premerge artifacts in Google Cloud Storage. Only click OK if the above unrealengine-premerge build(s) have passed."
 
@@ -75,10 +84,22 @@ steps:
     concurrency: 1
     concurrency_group: "unrealgdk-release"
   
-  - wait
+  - wait: ~
 
-  # Stage 4: Promote the release candiates to their respective release branches.
+  # Stage 4: Prepare the release candidates for the full release, updating references to the post-release state.
+  - block: "Prepare release candidate branches for full release"
+    prompt: "This will prepare all the release candidate branches with updated release-like references in preparation for the full release, which should be soon afterwards."
 
+  - label: "Prepare release canidadate branches for full release"
+    command: ci/prepare-full-release.sh
+    <<: *common # This folds the YAML named anchor into this step. Overrides, if any, should follow, not precede.
+    retry:
+      manual:
+        permit_on_passed: true
+    concurrency: 1
+    concurrency_group: "unrealgdk-release"
+
+  # Stage 5: Promote the release candiates to their respective release branches.
   # Block steps require a human to click a button, this is a safety precaution.
   - block: "Unblock the release"
     prompt: "This action will merge all release candidates into their respective release branches."
@@ -89,7 +110,7 @@ steps:
     concurrency_group: "unrealgdk-release"
     <<: *common # This folds the YAML named anchor into this step. Overrides, if any, should follow, not precede.
 
- # Stage 5: Mirror the release code from Github to Gitee
+ # Stage 6: Mirror the release code from Github to Gitee
   - block: "Unblock mirror code to gitee"
     prompt: "This action will mirror all of the release code to gitee."
 
