--- a/.buildkite/release.definition.yaml
+++ b/.buildkite/release.definition.yaml
@@ -7,5 +7,5 @@ github:
 teams:
 - name: Everyone
   permission: READ_ONLY
-- name: gbu/develop/unreal
+- name: gen/team/unreal
   permission: MANAGE_BUILD_AND_READ
